vlib/v/checker/tests/hex_lit_without_digit_err.out
vlib/v/checker/tests/hex_lit_without_digit_err.v:2:14: error: number part of this hexadecimal is not provided
    1 | fn main() {
    2 |     println(0x)
      |              ^
    3 | }
