vlib/v/checker/tests/hex_lit_without_digit_err.vv
fn main() {
    println(0x)
}
